# flock

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benchmarks/: BENCHMARKS.md  bench_blake3.sh  bench_blake3_flock.sh  bench_keccak.sh  bench_keccak_14.sh  bench_sha256.sh  breakdown.sh
benchmarks/bench-hash-in-snark/: setup.sh
benchmarks/binius64/: blake3_compressions.rs  keccak_permutations.rs  parallel_witness_gen.patch  setup.sh  sha256_compressions.rs
benchmarks/plonky3/: setup.sh
benchmarks/spartan2/: setup.sh
crates/flock-core/: Cargo.toml
crates/flock-core/configs/ligerito/: m22_fast.toml  m22_secure.toml  m22_slim.toml  m23_fast.toml  m23_secure.toml  m23_slim.toml  m24_fast.toml  m24_secure.toml  m24_slim.toml  m25_fast.toml  m25_secure.toml  m25_slim.toml  m26_fast.toml  m26_secure.toml  m26_slim.toml  m27_fast.toml  m27_secure.toml  m27_slim.toml  m28_fast.toml  m28_secure.toml  m28_slim.toml  m29_fast.toml  m29_secure.toml  m29_slim.toml  m30_fast.toml  m30_secure.toml  m30_slim.toml  m31_fast.toml  m31_secure.toml  m31_slim.toml  m32_fast.toml  m32_secure.toml  m32_slim.toml  m33_fast.toml  m33_secure.toml  m33_slim.toml  m34_fast.toml  m34_secure.toml  m34_slim.toml  m35_fast.toml  (+2 more)
crates/flock-core/src/: bits.rs  challenger.rs  field.rs  lib.rs  lincheck.rs  merkle.rs  ntt.rs  pcs.rs  permutation.rs  proof.rs  r1cs.rs  scratch.rs  verifier.rs  zerocheck.rs
crates/flock-core/src/field/: gf2_128.rs  gf2_8.rs  phi8.rs
crates/flock-core/src/ntt/: additive_ntt_f128.rs  inv_table.rs  inv_table_deg4.rs  parallel_f128.rs
crates/flock-core/src/pcs/: basefold.rs  commit.rs  ligerito.rs  pack.rs  ring_switch.rs  tensor_algebra.rs
crates/flock-core/src/zerocheck/: multilinear.rs  univariate_skip.rs  univariate_skip_deg4.rs  univariate_skip_deg4_optimized.rs  univariate_skip_optimized.rs
crates/flock-prover/: Cargo.toml
crates/flock-prover/benches/: blake3_chain_lig_vs_bf.rs  lincheck.rs  sha2_merkle_lig_vs_bf.rs
crates/flock-prover/src/r1cs_hashes/: merkle_path_common.rs  sha2.rs
scripts/: profile-aggregate.sh  soundness.py
